--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/ui": "^2.1",
         "nwidart/laravel-modules": "^7.1",
         "simplesoftwareio/simple-qrcode": "~3",
+        "spatie/laravel-activitylog": "^3.14",
         "spatie/laravel-permission": "^3.13"
     },
     "require-dev": {
