--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -6,6 +6,8 @@
     "/js/filemanagement/document-activate.js": "/js/filemanagement/document-activate.js",
     "/js/filemanagement/document-number.js": "/js/filemanagement/document-number.js",
     "/js/filemanagement/form-afl-create.js": "/js/filemanagement/form-afl-create.js",
+    "/js/filemanagement/form-afl-edit-sick.js": "/js/filemanagement/form-afl-edit-sick.js",
+    "/js/filemanagement/form-afl-edit-vacation.js": "/js/filemanagement/form-afl-edit-vacation.js",
     "/js/filemanagement/form-cafoa-create.js": "/js/filemanagement/form-cafoa-create.js",
     "/js/filemanagement/obr-create.js": "/js/filemanagement/obr-create.js",
     "/js/filemanagement/pr-create.js": "/js/filemanagement/pr-create.js",
