--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,6 +2,7 @@
     "/js/app.js": "/js/app.js",
     "/js/filemanagement/app.js": "/js/filemanagement/app.js",
     "/css/filemanagement/app.css": "/css/filemanagement/app.css",
+    "/css/filetracking/app.css": "/css/filetracking/app.css",
     "/css/style.css": "/css/style.css",
     "/js/filemanagement/document-activate.js": "/js/filemanagement/document-activate.js",
     "/js/filemanagement/document-number.js": "/js/filemanagement/document-number.js",
@@ -12,6 +13,12 @@
     "/js/filemanagement/itinerary-create.js": "/js/filemanagement/itinerary-create.js",
     "/js/filemanagement/obr-create.js": "/js/filemanagement/obr-create.js",
     "/js/filemanagement/pr-create.js": "/js/filemanagement/pr-create.js",
+    "/js/filetracking/app.js": "/js/filetracking/app.js",
+    "/js/filetracking/form-afl-create.js": "/js/filetracking/form-afl-create.js",
+    "/js/filetracking/form-cafoa-create.js": "/js/filetracking/form-cafoa-create.js",
+    "/js/filetracking/form-dv-create.js": "/js/filetracking/form-dv-create.js",
+    "/js/filetracking/form-payroll-create.js": "/js/filetracking/form-payroll-create.js",
+    "/js/filetracking/fts_document.js": "/js/filetracking/fts_document.js",
     "/js/system/app.js": "/js/system/app.js",
     "/js/system/signin.js": "/js/system/signin.js",
     "/js/system/user-create.js": "/js/system/user-create.js"
