--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "nwidart/laravel-modules": "^8.2",
+        "simplesoftwareio/simple-qrcode": "^4.1",
         "spatie/laravel-permission": "^3.18"
     },
     "require-dev": {
