--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -20,6 +20,7 @@
     "/js/Modules/FileManagement/pages/forms/travel-order/index.js": "/js/Modules/FileManagement/pages/forms/travel-order/index.js",
     "/js/Modules/FileManagement/webpack.mix.js": "/js/Modules/FileManagement/webpack.mix.js",
     "/js/Modules/FileTracking/app.js": "/js/Modules/FileTracking/app.js",
+    "/js/Modules/FileTracking/pages/forms/afl/create.js": "/js/Modules/FileTracking/pages/forms/afl/create.js",
     "/js/Modules/FileTracking/pages/forms/cafoa/create.js": "/js/Modules/FileTracking/pages/forms/cafoa/create.js",
     "/js/Modules/FileTracking/pages/forms/cafoa/index.js": "/js/Modules/FileTracking/pages/forms/cafoa/index.js",
     "/js/Modules/FileTracking/pages/forms/create.js": "/js/Modules/FileTracking/pages/forms/create.js",
@@ -28,6 +29,8 @@
     "/js/Modules/FileTracking/pages/forms/payroll/index.js": "/js/Modules/FileTracking/pages/forms/payroll/index.js",
     "/js/Modules/FileTracking/pages/forms/pr/index.js": "/js/Modules/FileTracking/pages/forms/pr/index.js",
     "/js/Modules/FileTracking/pages/index.js": "/js/Modules/FileTracking/pages/index.js",
+    "/js/Modules/FileTracking/pages/qr.js": "/js/Modules/FileTracking/pages/qr.js",
+    "/js/Modules/FileTracking/pages/rr.js": "/js/Modules/FileTracking/pages/rr.js",
     "/js/Modules/HumanResource/app.js": "/js/Modules/HumanResource/app.js",
     "/js/Modules/HumanResource/employee/create.js": "/js/Modules/HumanResource/employee/create.js",
     "/js/Modules/HumanResource/employee/edit.js": "/js/Modules/HumanResource/employee/edit.js",
