--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -21,6 +21,7 @@
     "/js/Modules/FileManagement/webpack.mix.js": "/js/Modules/FileManagement/webpack.mix.js",
     "/js/Modules/FileTracking/app.js": "/js/Modules/FileTracking/app.js",
     "/js/Modules/FileTracking/pages/forms/afl/create.js": "/js/Modules/FileTracking/pages/forms/afl/create.js",
+    "/js/Modules/FileTracking/pages/forms/afl/index.js": "/js/Modules/FileTracking/pages/forms/afl/index.js",
     "/js/Modules/FileTracking/pages/forms/cafoa/create.js": "/js/Modules/FileTracking/pages/forms/cafoa/create.js",
     "/js/Modules/FileTracking/pages/forms/cafoa/index.js": "/js/Modules/FileTracking/pages/forms/cafoa/index.js",
     "/js/Modules/FileTracking/pages/forms/create.js": "/js/Modules/FileTracking/pages/forms/create.js",
