--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,14 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "intervention/image": "^2.5",
         "jenssegers/agent": "^2.6",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "nwidart/laravel-modules": "^8.2",
         "simplesoftwareio/simple-qrcode": "^4.1",
-        "spatie/laravel-permission": "^3.18"
+        "spatie/laravel-permission": "^3.18",
+        "staudenmeir/eloquent-json-relations": "^1.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
