--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
         "jenssegers/agent": "^2.6",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
+        "livewire/livewire": "^2.3",
+        "mhmiton/laravel-modules-livewire": "dev-master",
         "nwidart/laravel-modules": "^8.2",
         "simplesoftwareio/simple-qrcode": "^4.1",
         "spatie/laravel-permission": "^3.18",
