--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,6 +3,7 @@
     "/css/Modules/FileManagement/app.css": "/css/Modules/FileManagement/app.css",
     "/css/Modules/FileManagement/paper.css": "/css/Modules/FileManagement/paper.css",
     "/css/Modules/FileTracking/app.css": "/css/Modules/FileTracking/app.css",
+    "/css/Modules/General/app.css": "/css/Modules/General/app.css",
     "/css/Modules/HumanResource/app.css": "/css/Modules/HumanResource/app.css",
     "/css/Modules/System/app.css": "/css/Modules/System/app.css",
     "/js/Modules/FileManagement/pages/documents/activation.js": "/js/Modules/FileManagement/pages/documents/activation.js",
@@ -39,6 +40,9 @@
     "/js/Modules/FileTracking/pages/index.js": "/js/Modules/FileTracking/pages/index.js",
     "/js/Modules/FileTracking/pages/qr.js": "/js/Modules/FileTracking/pages/qr.js",
     "/js/Modules/FileTracking/pages/rr.js": "/js/Modules/FileTracking/pages/rr.js",
+    "/js/Modules/General/app.js": "/js/Modules/General/app.js",
+    "/js/Modules/General/pages/messenger.js": "/js/Modules/General/pages/messenger.js",
+    "/js/Modules/General/webpack.mix.js": "/js/Modules/General/webpack.mix.js",
     "/js/Modules/HumanResource/app.js": "/js/Modules/HumanResource/app.js",
     "/js/Modules/HumanResource/employee/create.js": "/js/Modules/HumanResource/employee/create.js",
     "/js/Modules/HumanResource/employee/edit.js": "/js/Modules/HumanResource/employee/edit.js",
