--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,74 +1,84 @@
-# For more information: https://laravel.com/docs/sail
-version: '3'
-services:
-    laravel.test:
-        build:
-            context: ./vendor/laravel/sail/runtimes/8.0
-            dockerfile: Dockerfile
-            args:
-                WWWGROUP: '${WWWGROUP}'
-        image: sail-8.0/app
-        ports:
-            - '${APP_PORT:-80}:80'
-        environment:
-            WWWUSER: '${WWWUSER}'
-            LARAVEL_SAIL: 1
-        volumes:
-            - '.:/var/www/html'
-        networks:
-            - sail
-        depends_on:
-            - mysql
-            - redis
-            # - selenium
-    # selenium:
-    #     image: 'selenium/standalone-chrome'
-    #     volumes:
-    #         - '/dev/shm:/dev/shm'
-    #     networks:
-    #         - sail
-    #     depends_on:
-    #         - laravel.test
+version: "3"
+
+services: 
+    #NGINX
+    webserver:
+        image: nginx:stable-alpine
+        container_name: mis_nginx
+        restart: unless-stopped
+        ports: 
+            - "8080:80"
+        volumes: 
+            - .:/var/www/html
+            - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+        depends_on: 
+            - php
+            - mysql 
+        networks: 
+            - mis_network
+    #MYSQL
     mysql:
-        image: 'mysql:8.0'
-        ports:
-            - '${FORWARD_DB_PORT:-3306}:3306'
-        environment:
-            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_DATABASE: '${DB_DATABASE}'
-            MYSQL_USER: '${DB_USERNAME}'
-            MYSQL_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
-        volumes:
-            - 'sailmysql:/var/lib/mysql'
-        networks:
-            - sail
-    redis:
-        image: 'redis:alpine'
-        ports:
-            - '${FORWARD_REDIS_PORT:-6379}:6379'
-        volumes:
-            - 'sailredis:/data'
-        networks:
-            - sail
-    # memcached:
-    #     image: 'memcached:alpine'
-    #     ports:
-    #         - '11211:11211'
-    #     networks:
-    #         - sail
-    mailhog:
-        image: 'mailhog/mailhog:latest'
-        ports:
-            - 1025:1025
-            - 8025:8025
-        networks:
-            - sail
-networks:
-    sail:
-        driver: bridge
-volumes:
-    sailmysql:
-        driver: local
-    sailredis:
-        driver: local
+        image: mysql:8.0.21
+        container_name: mis_mysql
+        restart: unless-stopped
+        tty: true
+        ports: 
+            - "33061:3306"
+        environment: 
+            MYSQL_DATABASE: ${DB_DATABASE}
+            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+            MYSQL_PASSWORD: ${DB_PASSWORD}
+            MYSQL_USER: ${DB_USERNAME}
+            SERVICE_TAGS: dev
+            SERVICE_NAME: mysql
+        volumes: 
+            - ./docker/mysql/data:/var/lib/mysql
+            - ./docker/mysql/my.cnf:/etc/mysql/conf.d/mysql-custom.cnf
+        networks: 
+            - mis_network
+    #PHP
+    php:
+        build:
+            context: .
+            dockerfile: ./docker/php/php.dockerfile
+        container_name: mis_php
+        volumes: 
+            - .:/var/www/html
+        ports: 
+            - "9000:9000"
+        networks: 
+            - mis_network
+    #COMPOSER
+    composer:
+        image: composer:latest
+        container_name: mis_composer
+        volumes: 
+            - .:/var/www/html
+        working_dir: /var/www/html
+        depends_on: 
+            - php
+    #NPM
+    npm:
+        image: node:14.9
+        container_name: mis_npm
+        volumes: 
+            - .:/var/www/html
+        working_dir: /var/www/html
+        entrypoint: ['npm']
+    #ARTISAN
+    artisan:
+        build: 
+            context: .
+            dockerfile: ./docker/php/php.dockerfile 
+        container_name: mis_network
+        volumes: 
+            - .:/var/www/html
+        depends_on: 
+            - mysql
+        working_dir: /var/www/html
+        entrypoint: ['php', '/var/www/html/artisan']
+        networks: 
+            - mis_network
+# Docker Network
+networks: 
+    mis_network:
