--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
+    "/js/Modules/FileManagement/pages/forms/afl/create.js": "/js/Modules/FileManagement/pages/forms/afl/create.js",
     "/js/Modules/FileManagement/pages/forms/afl/index.js": "/js/Modules/FileManagement/pages/forms/afl/index.js",
     "/js/Modules/FileManagement/pages/forms/cafoa/create.js": "/js/Modules/FileManagement/pages/forms/cafoa/create.js",
     "/js/Modules/FileManagement/pages/forms/cafoa/index.js": "/js/Modules/FileManagement/pages/forms/cafoa/index.js",
