--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "spatie/laravel-image-optimizer": "^1.6",
         "spatie/laravel-permission": "^4.0",
         "staudenmeir/eloquent-json-relations": "^1.5",
-        "tightenco/ziggy": "^1.3"
+        "tightenco/ziggy": "^1.3",
+        "tmw/fpdm": "^2.9"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
