--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "mhmiton/laravel-modules-livewire": "^1.3",
         "nwidart/laravel-modules": "^8.2",
         "simplesoftwareio/simple-qrcode": "~4",
+        "spatie/laravel-activitylog": "^4.4",
         "spatie/laravel-permission": "^5.4"
     },
     "require-dev": {
