--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.21",
+        "axios": "^0.25.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
@@ -19,6 +19,11 @@
         "sass-loader": "^12.1.0"
     },
     "dependencies": {
-        "@tabler/core": "^1.0.0-beta6"
+        "@tabler/core": "^1.0.0-beta6",
+        "form-serialize": "^0.7.2",
+        "jquery": "^3.6.0",
+        "jquery.repeater": "^1.2.1",
+        "sweetalert2": "^11.3.6",
+        "tom-select": "^2.0.0"
     }
 }
